# amazed

./: .gitignore  .travis.yml  Makefile.in  README.md  aclocal.m4  configure  configure.ac  description
include/: board.hpp  config.hpp  environment.hpp  tiles.h
include/board/: curses.hpp
include/environment/: maze.hpp
src/: main.cpp
src/board/: curses.cpp
src/environment/: maze.cpp
test/: maze.cpp
